--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
         <script src="./resources/ol.js"></script>
         <script src="./resources/ol-layerswitcher.js"></script>
         <script src="resources/ol-geocoder.js"></script>
-        <script src="layers/FiberBackbone_2.js"></script><script src="layers/Fiber_3.js"></script><script src="layers/Fiber_4.js"></script><script src="layers/Flowerpot_5.js"></script><script src="layers/Handgole_6.js"></script><script src="layers/FiberNode_7.js"></script><script src="layers/PrimarySplitter_8.js"></script><script src="layers/Boundary_9.js"></script>
-        <script src="styles/FiberBackbone_2_style.js"></script><script src="styles/Fiber_3_style.js"></script><script src="styles/Fiber_4_style.js"></script><script src="styles/Flowerpot_5_style.js"></script><script src="styles/Handgole_6_style.js"></script><script src="styles/FiberNode_7_style.js"></script><script src="styles/PrimarySplitter_8_style.js"></script><script src="styles/Boundary_9_style.js"></script>
+        <script src="layers/FiberBackbone_1.js"></script><script src="layers/Fiber_2.js"></script><script src="layers/Fiber_3.js"></script><script src="layers/Flowerpot_4.js"></script><script src="layers/Handhole_5.js"></script><script src="layers/FiberNode_6.js"></script><script src="layers/PrimarySplitter_7.js"></script><script src="layers/Boundary_8.js"></script>
+        <script src="styles/FiberBackbone_1_style.js"></script><script src="styles/Fiber_2_style.js"></script><script src="styles/Fiber_3_style.js"></script><script src="styles/Flowerpot_4_style.js"></script><script src="styles/Handhole_5_style.js"></script><script src="styles/FiberNode_6_style.js"></script><script src="styles/PrimarySplitter_7_style.js"></script><script src="styles/Boundary_8_style.js"></script>
         <script src="./layers/layers.js" type="text/javascript"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>
